fix: layout issues
- don't scale layout tables
- keep font size in InteractiveSemanticGraph elements
- don't align nested lists left (e. g. tiles)
- init layout directly on load

--- a/modules/ext.reveal.css
+++ b/modules/ext.reveal.css
@@ -1,6 +1,3 @@
-.mw-reveal-foo {
-	float: left;
-}
 
 .column-container-grid {
     height: 100%;
@@ -35,3 +32,7 @@
     grid-template-rows: auto;
     grid-gap: 3px;
 }*/
+
+.InteractiveSemanticGraph {
+    font-size: medium;
+}
